testing/adguardhome: upgrade to 0.107.60

--- a/testing/adguardhome/APKBUILD
+++ b/testing/adguardhome/APKBUILD
@@ -2,16 +2,15 @@
 # Contributor: tetsumaki <yd-alpine@tetsumaki.net>
 maintainer="Fabricio Silva <hi@fabricio.dev>"
 pkgname=adguardhome
-pkgver=0.107.59
-pkgrel=1
+pkgver=0.107.60
+pkgrel=0
 pkgdesc="Network-wide ads & trackers blocking DNS server"
 url="https://adguard.com/adguard-home.html"
-# s390x: illegal combination MOVWBR ADDR NONE NONE NONE NONE REG
-arch="all !s390x"
+arch="all !loongarch64" # loongarch64: panic: runtime error: invalid memory address or nil pointer dereference
 license="GPL-3.0-only"
-options="net setcap" # net for go
+options="net" # net for go
 depends="ca-certificates"
-makedepends="go libcap-utils"
+makedepends="go"
 checkdepends="tzdata"
 subpackages="$pkgname-openrc"
 install="$pkgname.pre-install"
@@ -50,18 +49,15 @@ check() {
 
 package() {
 	install -Dm754 -o adguardhome -g adguardhome bin/adguardhome -t "$pkgdir"/usr/bin/
-	# https://adguard-dns.io/kb/adguard-home/getting-started/#running-without-superuser
-	# bind_service for ports lower than 1024 / raw for dhcp/sockets
-	setcap "cap_net_bind_service=+eip cap_net_raw=+eip" "$pkgdir"/usr/bin/adguardhome
 
 	install -Dm755 "$srcdir"/$pkgname.initd "$pkgdir"/etc/init.d/$pkgname
 	install -Dm644 "$srcdir"/$pkgname.confd "$pkgdir"/etc/conf.d/$pkgname
 }
 
 sha512sums="
-eedf4e0425160abfe0510fdf7547c497df921276f7f0cfb3d589987c9610761a75490ed6b19013732ee40baa7c799b7eadedb5ab3c24c48e45e19f987c9fa734  adguardhome-0.107.59.tar.gz
-882f83c0cb1841c16adb0c1041f2c04aa662634114c376613b1173f234390d1e88df5bcdc46e9b27b1a835c870beafa83734ef0b86a436ea13e431edf5faf5ab  adguardhome-frontend-0.107.59.tar.gz
-6d7f68fa8fc08913ffba215dc23877050b508f097fe1dbd7d1bb592169309e1f0499d926d1841dc2e7c8b0679f12e5caa00ad2d9f8c9b2aa213c779047cf748b  adguardhome.initd
+48bc1fe8433bf6dbccd27cbd975e3859f5840dfe75455fcc5c701ea0ce3d5cd78240a8812217f61b5c33f23d2baa3b576a88963c8286a0e2efbee9dae1d59c16  adguardhome-0.107.60.tar.gz
+5efbdcb163ce5f34fd75635166ce1cffb61bca3250da711b76168c371d9a1411d0b115dc5bcb19fe61a95b83711043cf5fa77a3b4c90e93f7adeee9798a84eba  adguardhome-frontend-0.107.60.tar.gz
+350cf4a5d7c6dbb46cbdd973de7cbd490e873a03f8c78815d9d7e95f88167676c6387f055aedf0ec085e6d214605bee2e8899a65810fb364c35d522d91e5567a  adguardhome.initd
 f7b7365079b901cbc08c4d0553160a7e5f15205b509e8dc867351338153820acb705807763c12cd66f5120dfa1c008c04a2f01c60331951146f4938791dfea32  adguardhome.confd
 b0dde70e9fc1ee40916233d884de2d8fae1a29b6036160334497b02ba7061e009b53b98cc49aae5dfde93d6226657a73ef833e2452e91a41f54bf74fdb8dbcb3  cap_check.patch
 "
