community/rawtherapee: upgrade to 5.11 enable JXL, use alpine system libraw, drop libjpegturbo patch, align with release packaging notes: https://www.rawtherapee.com/downloads/5.11/#news-relevant-to-package-maintainers

--- a/community/rawtherapee/APKBUILD
+++ b/community/rawtherapee/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: ScrumpyJack <scrumpyjack@st.ilet.to>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=rawtherapee
-pkgver=5.10
-pkgrel=1
+pkgver=5.11
+pkgrel=0
 pkgdesc="Powerful cross-platform raw image processing program"
 url="https://rawtherapee.com"
 arch="all"
@@ -23,24 +23,34 @@ makedepends="
 	libiptcdata-dev
 	libjpeg-turbo-dev
 	libpng-dev
+	libraw-dev
 	librsvg-dev
 	libsigc++-dev
-	mercurial
 	samurai
 	tiff-dev
 	zlib-dev
 	"
 options="!check"
+case "$CARCH" in
+s390x)
+	_WITH_JXL="OFF" # JXL broken build on s390x
+	;;
+*)
+	_WITH_JXL="ON"
+	makedepends="$makedepends libjxl-dev"
+	;;
+esac
 subpackages="$pkgname-doc $pkgname-dbg"
-source="https://rawtherapee.com/shared/source/rawtherapee-$pkgver.tar.xz
-	libjpeg-turbo.patch
-	"
+source="https://rawtherapee.com/shared/source/rawtherapee-$pkgver.tar.xz"
 
 build() {
 	export CXXFLAGS="$CXXFLAGS -flto=auto"
 	cmake -B build -G Ninja \
 		-DCMAKE_BUILD_TYPE=Release \
-		-DCMAKE_INSTALL_PREFIX=/usr
+		-DCMAKE_INSTALL_PREFIX=/usr \
+		-DWITH_JXL=$_WITH_JXL \
+		-DWITH_SYSTEM_LIBRAW="ON" \
+		-DCACHE_NAME_SUFFIX=""
 	cmake --build build
 }
 
@@ -49,6 +59,5 @@ package() {
 }
 
 sha512sums="
-79d6d54f90fec6006d3dff53aca00ccd385c398ebede2f06a223905d69e1045c6ab772bd5aca4bde01d9086c3c03183be22c0df521166b1af63b60bd7d0e1cfc  rawtherapee-5.10.tar.xz
-ba8ae49b70efaeeec67cebbe0df82ee6027f240a59b3cdf6be5a03550b702492612a5fe9731153b9d095ab76d1fcc55425dfcb4216bf8f5d9b6360b6b809d16b  libjpeg-turbo.patch
+a37af6d99569a6b427379b76b980be8dca5007bf4ec8fc65663e9e8d13850dd2f547e1633f69ee495df105ca6f0f9ab4daf12beec29c9fff63e2e7e5083813b2  rawtherapee-5.11.tar.xz
 "
