testing/py3-plotly: use gpep517 for building
Signed-off-by: Alistair Francis <alistair@alistair23.me>

--- a/testing/py3-plotly/APKBUILD
+++ b/testing/py3-plotly/APKBUILD
@@ -2,13 +2,13 @@
 pkgname=py3-plotly
 _pyname=plotly.py
 pkgver=5.24.1
-pkgrel=1
+pkgrel=2
 pkgdesc="An interactive, open-source, and browser-based graphing library for Python"
 url="https://jupyterlab.readthedocs.io/en/latest/"
 # webpack segfaults on riscv64
 arch="all !riscv64"
 license="MIT"
-depends="python3"
+depends="python3 py3-flask"
 makedepends="
 	npm
 	nodejs
@@ -35,18 +35,20 @@ builddir="$srcdir"/$_pyname-$pkgver
 
 build() {
 	cd packages/python/plotly
-	python3 setup.py build
+	gpep517 build-wheel --wheel-dir .dist --output-fd 3 3>&1 >&2
 }
 
 check() {
 	cd packages/python/plotly
-	pytest plotly/tests/test_core
+	python3 -m venv --clear --without-pip --system-site-packages testenv
+	testenv/bin/python3 -m installer .dist/*.whl
+	testenv/bin/python3 -m pytest -v plotly/tests/test_core
 }
 
 
 package() {
 	cd packages/python/plotly
-	python3 setup.py install --root="$pkgdir" --skip-build
+	python3 -m installer --destdir="$pkgdir" .dist/*.whl
 }
 
 sha512sums="
