testing/bazel8: add bash completion subpackage

--- a/testing/bazel8/APKBUILD
+++ b/testing/bazel8/APKBUILD
@@ -12,10 +12,12 @@ makedepends="linux-headers python3 unzip zip"
 # stripping breaks that: https://github.com/bazelbuild/bazel/issues/11842
 options="!strip"
 provides="bazel=$pkgver-r$pkgrel"
+subpackages="$pkgname-bash-completion"
 source="
 	https://github.com/bazelbuild/bazel/releases/download/$pkgver/bazel-$pkgver-dist.zip
 	bazel-$pkgver-archive.tar.gz::https://github.com/bazelbuild/bazel/archive/refs/tags/$pkgver.tar.gz
 	0001-off64t-fix.patch
+	0002-bash-completion-busybox.patch
 "
 builddir="$srcdir/"
 
@@ -23,6 +25,9 @@ build() {
 	EMBED_LABEL=$pkgver-$pkgrel \
 	EXTRA_BAZEL_ARGS=--tool_java_runtime_version=local_jdk \
 		./compile.sh
+
+	./output/bazel build //scripts:bazel-complete.bash
+	cp bazel-bin/scripts/bazel-complete.bash output/
 
 	./output/bazel clean --expunge
 }
@@ -49,10 +54,13 @@ check() {
 
 package() {
 	install -Dm 755 -t "$pkgdir/usr/bin" output/bazel
+	install -Dm 644 output/bazel-complete.bash \
+		"$pkgdir/usr/share/bash-completion/completions/bazel"
 }
 
 sha512sums="
 6e730e1613ce21068288ef3e2b7daf20c5542746a29c1a6e9421286fdf7cf57bd8547d686564fc8efe579c9ff6c457fc2772c84eca06f75dbbef5c8f6954e59d  bazel-8.2.0-archive.tar.gz
 7da194b5201a0185b4bf34f3da69165ad34dd689c2e4b8c42082ef1d7754feb596fa3f12d69acd157818a8f3ac3d9e86d43d41cea4e0065f2b7e42551976cdbb  bazel-8.2.0-dist.zip
 8b6ddcda8be35e49f4f5ece03ea1958a5f814b2b361544c1c7ac8f056f3d8282eaf329101d0a16cd2b981e6056b2179a476bd50a22adb81a5d5f663c4e8c15d3  0001-off64t-fix.patch
+b0bae27087f8d1da6a455500fc9fb4758ffdeaa27f0b11de720a0607aa3a4d682adfc1286b6385fe53e67296e7af1f61570b6b3093def1e8cee8531c7f4f5f82  0002-bash-completion-busybox.patch
 "
