--- a/testing/mkbrr/APKBUILD
+++ b/testing/mkbrr/APKBUILD
@@ -1,11 +1,11 @@
 # Contributor: Fabricio Silva <hi@fabricio.dev>
 maintainer="Fabricio Silva <hi@fabricio.dev>"
 pkgname=mkbrr
-pkgver=1.6.1
-pkgrel=1
+pkgver=1.8.1
+pkgrel=0
 pkgdesc="mkbrr is a tool to create, modify and inspect torrent files."
 url="https://github.com/autobrr/mkbrr"
-arch="all !x86 !armhf !armv7" # tests failing on 32bits
+arch="all !x86 !armhf !armv7" # 32bits are broken
 license="GPL-2.0-or-later"
 options="net" # net for go
 makedepends="go"
@@ -35,6 +35,6 @@ package() {
 }
 
 sha512sums="
-73b8937024a7809846d2c1eeb65a906a093249f91fbf59c9194ba4a0f7fd1e9d6244367dd6980f861e1db865043281176325856563c58f17eb31edffce5aebf3  mkbrr-1.6.1.tar.gz
+9f3405d14b197cc26b27e8c5a8ecae153ee3852f674e0fc8282f8085fdaf51f0789b250fb1ee1b87c4c02ded9506e01a97a1639f14e8712a33ea95adf04f2709  mkbrr-1.8.1.tar.gz
 dd73cbdf6bef71f706bdf585e0f2abe2bfe6625c6bdbd2b29bfadd1e9891cd52c121081c05e1c905ce5ced01ea2828a62ad02abf13069058469d4528543269c8  no-self-update.patch
 "
