testing/prowlarr: upgrade to 1.33.3.5008

--- a/testing/prowlarr/APKBUILD
+++ b/testing/prowlarr/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Fabricio Silva <hi@fabricio.dev>
 maintainer="Fabricio Silva <hi@fabricio.dev>"
 pkgname=prowlarr
-pkgver=1.32.2.4987
+pkgver=1.33.3.5008
 pkgrel=0
 pkgdesc="Aggregator for usenet index and torrent tracker"
 url="https://github.com/Prowlarr/Prowlarr"
@@ -79,6 +79,8 @@ check() {
 	_filters="$_filters&Category!=IntegrationTest&FullyQualifiedName!~DiskTransferServiceFixture"
 	# 	HttpProxySettingsProviderFixture: fails (ExtendedSocketException: Name does not resolve)
 	_filters="$_filters&FullyQualifiedName!~HttpProxySettingsProviderFixture"
+	# 	UpdateTests: update is disabled
+	_filters="$_filters&FullyQualifiedName!~UpdateTests"
 
 	# link build to tests
 	ln -sf ../../$_artifacts _tests/$_framework/$_runtime/bin
@@ -106,7 +108,7 @@ package() {
 }
 
 sha512sums="
-c170e13f675dde4c02cdeb2c873e4ec663409a282fbc242cef363a82e285684839a6fe9fd89f882d7dc247e4a0e2fdcfcf45aa554fe69d2d06e9228fe89a3d62  prowlarr-1.32.2.4987.tar.gz
+5eeaa7372a772ee2efad6b3aa4ea91eaf6c9a7b28e950c93b55c9aca2ff10b2ff37c4488531799f5adfaa3f09d417a8d8560ab5c9660fab43515c1956e620da3  prowlarr-1.33.3.5008.tar.gz
 753520379a6c5f2899b4ddfd820d5573598a32cb105f74c6fd978a3f2c98895cf709ef2d9afe2bae8c4856da86cb6a1364f5713ea7ef6a36bb21b5a5840c1471  0001-disable-restart.patch
 33de66749dc613a430ce00abcff070b646c80f158de2bf70c7078e5526f93348f24bb5d45ff55e3e06123aa4c849a8eebfebf941c8f9c54db87fa614bda679c7  prowlarr.initd
 1f073dd820a890e7d24d84e18763b04f07abd86a0370f56f7319c3e7c9da9d3e2be484e0cef2fb5fc4050be1cbb1e0445080d702d217393633256ed3758fc593  prowlarr.confd
