community/bpftrace: upgrade to 0.23.2

--- a/community/bpftrace/APKBUILD
+++ b/community/bpftrace/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Konstantin Kulikov <k.kulikov2@gmail.com>
 # Maintainer: Adam Jensen <adam@acj.sh>
 pkgname=bpftrace
-pkgver=0.22.1
-pkgrel=3
+pkgver=0.23.2
+pkgrel=0
 pkgdesc="High-level tracing language for Linux eBPF"
 url="https://github.com/iovisor/bpftrace"
 arch="all !x86" # x86 unsupported
@@ -28,10 +28,7 @@ makedepends="
 	samurai
 	libxml2-dev
 	"
-source="$pkgname-$pkgver.tar.gz::https://github.com/iovisor/bpftrace/archive/v$pkgver.tar.gz
-	10-link-libbpf.patch
-	20-zlib.patch
-	"
+source="$pkgname-$pkgver.tar.gz::https://github.com/iovisor/bpftrace/archive/v$pkgver.tar.gz"
 # Tests require root, network to download gmock and a few tests fail.
 # Stripping is done ourselves to keep the BEGIN_trigger symbol required
 # for BEGIN probe (see https://github.com/iovisor/bpftrace/issues/954 )
@@ -95,7 +92,5 @@ tools_doc() {
 }
 
 sha512sums="
-3bf00f97750092e66bd94b20b3889f29e932f45ae7f75966f1f364013fb9aeaad837617c0a28402fd9323d62773dd3dab0e9749d8dcb9da9c77093f17fce4d91  bpftrace-0.22.1.tar.gz
-1f884e75ee7df8d28e8f613eca64cc56f859806c5a8d0f491c07709b0000be3a29be62a3eab6dfb04fcf9aadd1a4c3fde26e212ea0c40e5a54e59a197f148ed4  10-link-libbpf.patch
-45aab5507ca1b8d4a8914cef5d771f9769c2984e5d7fc03a4c509948b2864170c58dc255d96ddf92defde5c76f41003ee653887f7036833c135481449781f251  20-zlib.patch
+80d7b91c3f80efcc69bea57a254fec2727050cbd39fce12786f796289f1fed92b7d9be91d5e9f5b348709f41cf3cffdf73d2321fbba2e54ff90648ecd8aab85e  bpftrace-0.23.2.tar.gz
 "
