--- a/community/py3-dnsrobocert/APKBUILD
+++ b/community/py3-dnsrobocert/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Duncan Bellamy <dunk@denkimushi.com>
 # Maintainer: Duncan Bellamy <dunk@denkimushi.com>
 pkgname=py3-dnsrobocert
-pkgver=3.25.0
-pkgrel=2
+pkgver=3.26.1
+pkgrel=0
 pkgdesc="A tool to manage your DNS-challenged TLS certificates"
 url="https://dnsrobocert.readthedocs.io/en/latest/"
 arch="noarch"
@@ -31,13 +31,12 @@ depends="
 	"
 makedepends="
 	py3-gpep517
-	py3-poetry-core
+	py3-hatchling
 	"
 checkdepends="pebble py3-pytest"
 subpackages="$pkgname-pyc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/adferrand/dnsrobocert/archive/v$pkgver.tar.gz
 	pebble.patch
-	revert-old-python.patch
 	"
 builddir="$srcdir/dnsrobocert-$pkgver"
 
@@ -58,7 +57,6 @@ package() {
 }
 
 sha512sums="
-bd0998bc5de09bb79c4810d555aa74c40ac497e72f6d40dec64d1472d08a085dc4ce99ec39fa8580a96cb2c1af7bbf88cebc18baba2b4697220d4d72f2cdabe1  py3-dnsrobocert-3.25.0.tar.gz
+1ee2a6b3e1e6f8cd9f5679846b1952483e43bcdeeb61267979cedc42d9e903674e6b7f31271a30a6e02030a98779f1705ec33c66997f4e1c40ac8402d38e3b25  py3-dnsrobocert-3.26.1.tar.gz
 3a8f2d9a74a35aea2e5eebcede656d2861382c975dc94560eca4f94cd8b13f1bb4a98b5b667cb5937ef9123a8f1da20dcef58a8ffc903e93e979d928bca9f9b1  pebble.patch
-bcaf7e5eccad8a713577269e2458502a089ff59c949c4ea583da6b13d6504f5ad9f905fdf1b0d30c759aa7a1555abcf16cedc11869f6ffef71b09a0204364493  revert-old-python.patch
 "
