community/phosh: fix compat with adwaita-icon-theme 48.0

--- a/community/phosh/APKBUILD
+++ b/community/phosh/APKBUILD
@@ -5,7 +5,7 @@
 # Maintainer: team/phosh <newbyte@postmarketos.org>
 pkgname=phosh
 pkgver=0.46.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Wayland shell for GNOME on mobile devices"
 # armhf: blocked by gnome-shell-schemas
 arch="all !armhf"
@@ -71,6 +71,7 @@ subpackages="
 	"
 source="https://sources.phosh.mobi/releases/phosh/phosh-${pkgver/_/.}.tar.xz
 	phosh.desktop
+	icon-fixes.patch
 	"
 builddir="$srcdir/$pkgname-${pkgver/_/.}"
 
@@ -118,4 +119,5 @@ libphosh_dev() {
 sha512sums="
 ff6c9d95f4a09d75f0f7ae667a06b0424a1a4266177227195981326da7967e337cf9de1b686febcb66b5776ffcec293ef6c6d899e0d7955b2e8b871d93e2db8c  phosh-0.46.0.tar.xz
 8ca4893a751311de326e198314669f5a276092ade99c6353c4c9ce070713fb1a5b1615e7fecb93b428dc79fd4001a9af43d24eafaf2545d7db464963fda25330  phosh.desktop
+54c28936a04e5471f5beaf91082c3afb1fb80a1ca062f69d4ebb1ef9653f9ae0001ac6a1444a2d6aea27eda451158be5e233839d4c594987563b4f26b4b4b80b  icon-fixes.patch
 "
