community/gdal: security upgrade to 3.10.3

--- a/community/gdal/APKBUILD
+++ b/community/gdal/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: Holger Jaekel <holger.jaekel@gmx.de>
 maintainer="Holger Jaekel <holger.jaekel@gmx.de>"
 pkgname=gdal
-pkgver=3.10.2
+pkgver=3.10.3
 pkgrel=0
 pkgdesc="A translator library for raster and vector geospatial data formats"
 url="https://gdal.org/"
@@ -76,11 +76,14 @@ subpackages="
 	$pkgname-bash-completion
 	$pkgname-driver-all:_gdal_driver_all:noarch
 	"
-
 source="https://download.osgeo.org/gdal/$pkgver/gdal-$pkgver.tar.gz
 	10-atoll.patch
 	20-plugin_installation_message.patch
 	"
+
+# secfixes:
+#   3.10.3-r0:
+#     - CVE-2025-29480
 
 # Print value of the specified variable, or the default if empty or not defined.
 getvar() {
@@ -410,7 +413,7 @@ doc() {
 }
 
 sha512sums="
-77b4f8ebb981df9296a0a855e8b28d6e010c381a79a3be4d95e3de9b57b303390ce852f5b221d658037cdc16ae90ca99f89d14c9771987a9f1ecc909a576df1b  gdal-3.10.2.tar.gz
+8dcb34f337b26c93dd934471a812a8b677aa9292655863daf78f9852a5d34d51c900c085fc18eea4dcbd0a7304bd05d571fd81153bf466dc30494997506b049c  gdal-3.10.3.tar.gz
 c1059034f62fa4f5088d3f6abbfae73773047b6ca3a0a197667c936c57266b68417c9e3bb436f507146d5440891de5fe059b62d560576e9c85b1b21afd0e5546  10-atoll.patch
 eae398e7d610115bb4df91771036986af3174dbc2b6fa1bead2144dd73c1546ead38a999aa5a55e38b4b4f3d19724cb24486d3fe57d3ca77f12f90b98ebf1988  20-plugin_installation_message.patch
 "
