--- a/testing/sqlx/APKBUILD
+++ b/testing/sqlx/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Matthias Ahouansou <matthias@ahouansou.cz>
 maintainer="Matthias Ahouansou <matthias@ahouansou.cz>"
 pkgname=sqlx
-pkgver=0.8.3
+pkgver=0.8.5
 pkgrel=0
 pkgdesc="Command-line utility for SQLx, the Rust SQL toolkit"
 url="https://github.com/launchbadge/sqlx"
@@ -21,12 +21,7 @@ subpackages="
 	$pkgname-fish-completion
 	cargo-$pkgname:cargosqlx
 "
-source="
-	$pkgname-$pkgver.tar.gz::https://github.com/launchbadge/sqlx/archive/refs/tags/v$pkgver.tar.gz
-	bump-deps.patch
-	replace-promptly-with-dialoguer.patch
-	use-u64.patch
-"
+source="$pkgname-$pkgver.tar.gz::https://github.com/launchbadge/sqlx/archive/refs/tags/v$pkgver.tar.gz"
 options="net"
 
 _cargo_args="-p sqlx-cli --frozen"
@@ -70,8 +65,5 @@ cargosqlx() {
 }
 
 sha512sums="
-b8f1da65fc6bdd7a3a2b1345f028cbcf3c2fa9df23827e99d2283743378f6ec3d4557c82520e6448e98e05b2b3b5ba3b5264318d0ce7eba23786a0e10a3ce4de  sqlx-0.8.3.tar.gz
-cdb2067de93fdb1b2ec4df8ca8f4877b153392e54bca2ff57bd4b28b45687ee7be94cc9fde7f0bb2843d6db3d430e49daa1f71bdc80b2e5f6c9ed960e5c7cb46  bump-deps.patch
-6dfc99675b90c9aa6360d5c007d193d4ad773a1d02529fc026f51c11faeb6b5b780da02a2028280036e24dc69e332bce020726bcb5b91773d873433066e40f7b  replace-promptly-with-dialoguer.patch
-779411627cefae0bf309a7754dee69c699ef1fb3b7e535ebda3ef3ac25c0e7d4e7655b3ddae0ebe6693c764751c9695c28f30de51474539335e912280a408870  use-u64.patch
+e3beaba0899bf8921af24532547d41c55dff64c5a488a0e16af7c24b87695e7e5a651c918a614a57db286886b3ee1b2537b67e581f4a0440ad5f223dfdd9fc9a  sqlx-0.8.5.tar.gz
 "
