community/raspberrypi-utils: upgrade to 0.20250416
separate gpiolib and piolib static libs into -dev  packages

--- a/community/raspberrypi-utils/APKBUILD
+++ b/community/raspberrypi-utils/APKBUILD
@@ -1,9 +1,9 @@
 # Contributor: macmpi <spam@ipik.org>
 # Maintainer: macmpi <spam@ipik.org>
 pkgname=raspberrypi-utils
-pkgver=0.20250318
+pkgver=0.20250416
 pkgrel=0
-_commit="92900c5c733c8b91a67b1772d4f0a25104f2b05d"
+_commit="f92b9735ba3141103c73cd0bf9781644caa91e42"
 pkgdesc="Collection of Raspberry Pi utilities (scripts and simple applications)"
 url="https://github.com/raspberrypi/utils"
 arch="armhf armv7 aarch64"
@@ -25,6 +25,7 @@ subpackages="
 	$pkgname-ovmerge::noarch
 	$pkgname-pinctrl
 	$pkgname-pinctrl-bash-completion:pinctrl_bashcomp:noarch
+	$pkgname-pinctrl-dev:pinctrl_dev
 	$pkgname-raspinfo::noarch
 	$pkgname-vcgencmd
 	$pkgname-vcgencmd-bash-completion:vcgencmd_bashcomp:noarch
@@ -34,7 +35,7 @@ subpackages="
 	$pkgname-vcmailbox-doc:vcmailbox_doc:noarch
 	"
 # piolib is specific to Pi 5 (aarch64)
-	[ "$CARCH" = "aarch64" ] && subpackages="$subpackages $pkgname-piolib"
+	[ "$CARCH" = "aarch64" ] && subpackages="$subpackages $pkgname-piolib $pkgname-piolib-dev:piolib_dev"
 
 prepare() {
 	default_prepare
@@ -148,8 +149,16 @@ pinctrl_bashcomp() {
 	amove usr/share/bash-completion/completions/pinctrl
 }
 
+pinctrl_dev() {
+	pkgdesc="gpiolib static library for Raspberry Pi devices (development files)"
+	depends=""
+
+	amove usr/include/gpiolib.h
+	amove usr/lib/libgpiolib.a
+}
+
 piolib() {
-	pkgdesc="A library for accessing the Pi 5's PIO hardware."
+	pkgdesc="Sample utilities leveraging Pi 5's PIO hardware."
 	depends=""
 
 	amove usr/bin/apitest \
@@ -157,6 +166,14 @@ piolib() {
 		usr/bin/pio* \
 		usr/bin/quadenc \
 		usr/bin/rp1sm
+}
+
+piolib_dev() {
+	pkgdesc="piolib static library for accessing Pi 5's PIO hardware (development files)"
+	depends=""
+	
+	amove usr/include/piolib
+	amove usr/lib/libpio.a
 }
 
 raspinfo() {
@@ -228,6 +245,6 @@ vcmailbox_doc() {
 }
 
 sha512sums="
-ff8992f7ea2761b4c8eab452e45e1f21e1a3894ea09ff1e0f10366fb206214ac3d444b8a1ed48edb2706858e421f386de7ee35169c5a273a71e791077071394a  raspberrypi-utils-92900c5c733c8b91a67b1772d4f0a25104f2b05d.tar.gz
+8196e82ebd0bccadbc5d0c929d8421a55ea4d2b97cc764cc220aab169470b7d39dd8283c1e4332d9ab1c9ae6a7b0857bda171a331d5bc323d0b6f4027168fba3  raspberrypi-utils-f92b9735ba3141103c73cd0bf9781644caa91e42.tar.gz
 33f9b8a140c7dd966abcbc019c3880efb16a4f7a91b6b40c624c5ce14dbf983aacb555919c5d520b56ea5e98e4026794116c2669549aaa9a117ca804bdcd4cb6  do-not-build-piolib.patch.txt
 "
