community/py3-ast-monitor: upgrade to 0.5.5

--- a/community/py3-ast-monitor/APKBUILD
+++ b/community/py3-ast-monitor/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Iztok Fister, Jr. <iztok@iztok-jr-fister.eu>
 # Maintainer: Iztok Fister, Jr. <iztok@iztok-jr-fister.eu>
 pkgname=py3-ast-monitor
-pkgver=0.5.3
+pkgver=0.5.5
 pkgrel=0
 pkgdesc="A wearable Raspberry Pi computer for cyclists"
 url="https://github.com/firefly-cpp/AST-Monitor"
@@ -18,7 +18,7 @@ depends="
 	py3-sport-activities-features
 	py3-tcxreader
 	"
-checkdepends="py3-pytest"
+checkdepends="py3-pytest py3-pytest-qt"
 makedepends="py3-gpep517 py3-poetry-core"
 subpackages="$pkgname-doc $pkgname-pyc"
 source="https://github.com/firefly-cpp/AST-Monitor/archive/$pkgver/ast_monitor-$pkgver.tar.gz"
@@ -33,7 +33,7 @@ build() {
 check() {
 	python3 -m venv --clear --without-pip --system-site-packages .testenv
 	.testenv/bin/python3 -m installer .dist/*.whl
-	.testenv/bin/python3 -m pytest -k 'not test_sport_activities_features'
+	.testenv/bin/python3 -m pytest -k 'not test_gui'
 }
 
 package() {
@@ -47,5 +47,5 @@ package() {
 }
 
 sha512sums="
-79ed67f1e85abffb64a9fe4ba22770559db36cac25770021bbd53fe03b049e50d8221fc3af91913edadfadea683f78df93c79b0fdbe9243a5803720acb0af558  ast_monitor-0.5.3.tar.gz
+fa175c7a84a193d4e3bdcadaeb6c28cf362e0963cd8650dd99a8f3c225ee3397db5173d13a603d1c12b7d173c984591e6bfa858012611b88c871e15d4c037cd1  ast_monitor-0.5.5.tar.gz
 "
