--- a/main/util-linux/APKBUILD
+++ b/main/util-linux/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=util-linux
 pkgver=2.41
-pkgrel=3
+pkgrel=4
 pkgdesc="Random collection of Linux utilities"
 url="https://git.kernel.org/cgit/utils/util-linux/util-linux.git"
 arch="all"
@@ -105,7 +105,7 @@ source="https://www.kernel.org/pub/linux/utils/util-linux/v$_v/util-linux-$pkgve
 #     - CVE-2021-37600
 
 # login utils included in subpackage util-linux-login.
-_login_cmds='newgrp last lastb login lslogins nologin su sulogin'
+_login_cmds='newgrp last lastb lastlog2 login lslogins nologin su sulogin'
 
 prepare() {
 	default_prepare
