--- a/community/forgejo/APKBUILD
+++ b/community/forgejo/APKBUILD
@@ -3,8 +3,8 @@
 # Contributor: techknowlogick <techknowlogick@gitea.io>
 # Maintainer: Patrycja Rosa <alpine@ptrcnull.me>
 pkgname=forgejo
-pkgver=10.0.3
-pkgrel=1
+pkgver=11.0.0
+pkgrel=0
 # Please apply changes to `forgejo-lts` as well
 pkgdesc="Self-hosted Git service written in Go"
 url="https://forgejo.org"
@@ -58,7 +58,7 @@ build() {
 	export CGO_LDFLAGS="$LDFLAGS"
 	unset LDFLAGS
 	## make FHS compliant
-	local setting="code.gitea.io/gitea/modules/setting"
+	local setting="forgejo.org/modules/setting"
 	export LDFLAGS="$LDFLAGS -X $setting.CustomConf=/etc/forgejo/app.ini"
 	export LDFLAGS="$LDFLAGS -X $setting.AppWorkPath=/var/lib/forgejo/"
 
@@ -104,7 +104,7 @@ package() {
 }
 
 sha512sums="
-372a7e79c5f6c134a737a479313a3f811eb34c4073c4a0dbe67db8c553a6dae11eb5a5f430c32848003a83f99e17a5365651650da799ec91dc436a330ae52581  forgejo-10.0.3.tar.gz
+493201b33f7f79fcd5b971a390955f4967b91ac6157256b74055800f4a13b0e86b1857c3e8861d2a96196ee4e98ac0d5ab84fa1d3ea729493d50bb043219dab8  forgejo-11.0.0.tar.gz
 497d8575f2eb5ac43baf82452e76007ef85e22cca2cc769f1cf55ffd03d7ce4d50ac4dc2b013e23086b7a5577fc6de5a4c7e5ec7c287f0e3528e908aaa2982aa  forgejo.initd
 b537b41b6b3a945274a6028800f39787b48c318425a37cf5d40ace0d1b305444fd07f17b4acafcd31a629bedd7d008b0bb3e30f82ffeb3d7e7e947bdbe0ff4f3  forgejo.ini
 "
