--- a/community/forgejo-lts/APKBUILD
+++ b/community/forgejo-lts/APKBUILD
@@ -4,8 +4,8 @@
 # Contributor: Patrycja Rosa <alpine@ptrcnull.me>
 maintainer="fossdd <fossdd@pwned.life>"
 pkgname=forgejo-lts
-pkgver=7.0.14
-pkgrel=1
+pkgver=11.0.0
+pkgrel=0
 # Please apply changes to `forgejo` as well
 pkgdesc="Self-hosted Git service written in Go (Long-term stable)"
 url="https://forgejo.org"
@@ -49,7 +49,7 @@ build() {
 	export CGO_LDFLAGS="$LDFLAGS"
 	unset LDFLAGS
 	## make FHS compliant
-	local setting="code.gitea.io/gitea/modules/setting"
+	local setting="forgejo.org/modules/setting"
 	export LDFLAGS="$LDFLAGS -X $setting.CustomConf=/etc/forgejo/app.ini"
 	export LDFLAGS="$LDFLAGS -X $setting.AppWorkPath=/var/lib/forgejo/"
 
@@ -95,7 +95,7 @@ package() {
 }
 
 sha512sums="
-7f01508e0010ba7ff95a24abdab31ae3b406eb282480e2d33b47afab24198d02f881e9631eee8c712a15d8230f9b7f98268339e913ebc152bb85b0c145c4b591  forgejo-lts-7.0.14.tar.gz
+493201b33f7f79fcd5b971a390955f4967b91ac6157256b74055800f4a13b0e86b1857c3e8861d2a96196ee4e98ac0d5ab84fa1d3ea729493d50bb043219dab8  forgejo-lts-11.0.0.tar.gz
 497d8575f2eb5ac43baf82452e76007ef85e22cca2cc769f1cf55ffd03d7ce4d50ac4dc2b013e23086b7a5577fc6de5a4c7e5ec7c287f0e3528e908aaa2982aa  forgejo.initd
 b537b41b6b3a945274a6028800f39787b48c318425a37cf5d40ace0d1b305444fd07f17b4acafcd31a629bedd7d008b0bb3e30f82ffeb3d7e7e947bdbe0ff4f3  forgejo.ini
 "
