--- a/community/py3-html2text/APKBUILD
+++ b/community/py3-html2text/APKBUILD
@@ -2,19 +2,20 @@
 # Maintainer: Galen Abell <galen@galenabell.com>
 pkgname=py3-html2text
 _pyname=html2text
-pkgver=2024.2.26
-pkgrel=1
+pkgver=2025.4.15
+pkgrel=0
 pkgdesc="Convert HTML to Markdown-formatted text"
 url="https://github.com/Alir3z4/html2text"
 arch="noarch"
 license="GPL-3.0-only"
-makedepends="py3-gpep517 py3-setuptools py3-wheel"
+makedepends="py3-gpep517 py3-setuptools py3-setuptools_scm py3-wheel"
 checkdepends="py3-pytest"
 subpackages="$pkgname-doc $pkgname-pyc"
 source="$_pyname-$pkgver.tar.gz::https://github.com/Alir3z4/html2text/archive/$pkgver.tar.gz"
 builddir="$srcdir/$_pyname-$pkgver"
 
 build() {
+	export SETUPTOOLS_SCM_PRETEND_VERSION="$pkgver"
 	gpep517 build-wheel \
 		--wheel-dir dist \
 		--output-fd 3 3>&1 >&2
@@ -32,5 +33,5 @@ package() {
 	install -Dm644 docs/* -t "$pkgdir/usr/share/doc/$_pyname"
 }
 sha512sums="
-cce3018f3ba865afa8d62d5c393d98b43fab79615d15e5f2be813f5e41fefa377f7d27a902691876fcad4145a223c7d49f9a7a338d6fa8c22183900cbfe7e520  html2text-2024.2.26.tar.gz
+47ec6c7abd6869df36a86d0f0d40d212f6b278db3d06077f5fa4059d2cd31bf9fb65c1d6c8eee6602f4a4d52e28b4c40c563b8553935d929ec4770cc2bbe216d  html2text-2025.4.15.tar.gz
 "
