community/minipro: upgrade to 0.7.3

--- a/community/minipro/APKBUILD
+++ b/community/minipro/APKBUILD
@@ -1,14 +1,14 @@
 # Contributor: Bryce Vandegrift <bryce@brycevandegrift.xyz>
 # Maintainer: Bryce Vandegrift <bryce@brycevandegrift.xyz>
 pkgname=minipro
-pkgver=0.7.2
+pkgver=0.7.3
 pkgrel=0
 pkgdesc="Program for controlling the MiniPRO TL866xx series of chip programmers"
 url="https://gitlab.com/DavidGriffith/minipro"
 arch="all"
 license="GPL-3.0-or-later"
 depends="libusb"
-makedepends="git libusb-dev"
+makedepends="git libusb-dev zlib-dev"
 subpackages="$pkgname-doc $pkgname-bash-completion $pkgname-udev"
 options="!check" # no test suite
 source="https://gitlab.com/DavidGriffith/minipro/-/archive/$pkgver/minipro-$pkgver.tar.gz"
@@ -32,5 +32,5 @@ udev() {
 }
 
 sha512sums="
-6b20562eecd92b49cf5e35235a692dccc2bbd840358d31ea765431849305b6601b071863cffff00acab41daa3eafafa4f6252039a461262579a39e87e620b40f  minipro-0.7.2.tar.gz
+dbd743fb7192f62a63ee0ccff71d97978f3104a665dc3d2ab2a793999e28035742e34a63630fd5568f5a230c57f4f2374afd55c3a9531886459541104acb6d2f  minipro-0.7.3.tar.gz
 "
