community/libgit2-glib: upgrade to 1.2.1
https://gitlab.gnome.org/GNOME/libgit2-glib/-/blob/1.2.1/NEWS

--- a/community/libgit2-glib/APKBUILD
+++ b/community/libgit2-glib/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libgit2-glib
-pkgver=1.2.0
-pkgrel=5
+pkgver=1.2.1
+pkgrel=0
 pkgdesc="Glib wrapper library around libgit2"
 url="https://wiki.gnome.org/Projects/Libgit2-glib"
 arch="all"
@@ -10,10 +10,8 @@ license="LGPL-2.1-or-later"
 depends_dev="libgit2-dev"
 makedepends="py3-gobject3-dev vala gobject-introspection-dev meson $depends_dev"
 options="!check" # UTF-8 checks fail in some environments
-subpackages="$pkgname-dev"
-source="https://download.gnome.org/sources/libgit2-glib/${pkgver%.*}/libgit2-glib-$pkgver.tar.xz
-	support-libgit2-1.9.patch
-	"
+subpackages="$pkgname-dev $pkgname-pyc"
+source="https://download.gnome.org/sources/libgit2-glib/${pkgver%.*}/libgit2-glib-$pkgver.tar.xz"
 
 build() {
 	abuild-meson \
@@ -31,6 +29,5 @@ package() {
 }
 
 sha512sums="
-37004e86c663ce5fe1bd54878b908575eb9195c1012e88e39c2efdb0b6cfa1de3d2ed9754cecc1b942d001698870025c87d95856f2a0a9f2d0dba1979b07b1f8  libgit2-glib-1.2.0.tar.xz
-e5678fca3478d4d2c3080185d8ed8ee6bd2b9cab6c4e2a864f23b34f55f3c8840c510baba75b2f2cd43f550b3a50cdb8d038db5436f9d72b4df140e402e3df58  support-libgit2-1.9.patch
+024b8699f1b5d53e36bef7acb618bddf21f053cde795245b69b8ea2cf681435dc5353cee6e05b189c7fc6395ac3b897de58b671c3bfc0157e00cfbeed53a2261  libgit2-glib-1.2.1.tar.xz
 "
