--- a/community/libgit2-glib/APKBUILD
+++ b/community/libgit2-glib/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libgit2-glib
-pkgver=1.2.0
-pkgrel=4
+pkgver=1.2.1
+pkgrel=0
 pkgdesc="Glib wrapper library around libgit2"
 url="https://wiki.gnome.org/Projects/Libgit2-glib"
 arch="all"
@@ -11,9 +11,7 @@ depends_dev="libgit2-dev"
 makedepends="py3-gobject3-dev vala gobject-introspection-dev meson $depends_dev"
 options="!check" # UTF-8 checks fail in some environments
 subpackages="$pkgname-dev"
-source="https://download.gnome.org/sources/libgit2-glib/${pkgver%.*}/libgit2-glib-$pkgver.tar.xz
-	build-Fix-build-against-and-require-libgit2-1.8.0.patch
-	"
+source="https://download.gnome.org/sources/libgit2-glib/${pkgver%.*}/libgit2-glib-$pkgver.tar.xz"
 
 build() {
 	abuild-meson \
@@ -31,6 +29,5 @@ package() {
 }
 
 sha512sums="
-37004e86c663ce5fe1bd54878b908575eb9195c1012e88e39c2efdb0b6cfa1de3d2ed9754cecc1b942d001698870025c87d95856f2a0a9f2d0dba1979b07b1f8  libgit2-glib-1.2.0.tar.xz
-834d47f40ce3165c145807ebd70ec169b826ecafde09c9e7b8f65e7f434e61de4510cfe55979851069cfa17b4334c3b2a9b0db239036991155cec968f5d70d90  build-Fix-build-against-and-require-libgit2-1.8.0.patch
+024b8699f1b5d53e36bef7acb618bddf21f053cde795245b69b8ea2cf681435dc5353cee6e05b189c7fc6395ac3b897de58b671c3bfc0157e00cfbeed53a2261  libgit2-glib-1.2.1.tar.xz
 "
