--- a/main/mesa/APKBUILD
+++ b/main/mesa/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=mesa
 pkgver=24.3.4
-pkgrel=0
+pkgrel=1
 pkgdesc="Mesa DRI OpenGL library"
 url="https://www.mesa3d.org"
 arch="all"
@@ -25,7 +25,7 @@ subpackages="
 	$pkgname-vulkan-layers:_vulkan_layers
 	$pkgname-libd3dadapter9
 	"
-_llvmver=19
+_llvmver=20
 depends_dev="
 	libdrm-dev
 	libxext-dev
@@ -71,6 +71,7 @@ source="
 	https://mesa.freedesktop.org/archive/mesa-${pkgver/_/-}.tar.xz
 	23575.patch
 	riscv64-tls.patch
+	llvm20.patch
 	"
 builddir="$srcdir/mesa-${pkgver/_/-}"
 
@@ -406,4 +407,5 @@ sha512sums="
 9c23cd86fda4cf0289c5a78b08ceea8b01e5b141d86ee3e659fa46e62ff9586ff92a4984d2a340b5bf209c4c7f3414bf99f3ced19feee8fb39ef99fe572dbd55  mesa-24.3.4.tar.xz
 4cfd6532a96103589efd885240ce12414b473aed05956507e0b78a46e44216974adac1a8dc22db0d185e6c8a98988ebaed79ac0e83156c75a41199591f52f944  23575.patch
 ce1887fb7d425b94c375a0547bee40c308809c01f5ce1bcddabcc69a7fcb445efb9d5f5c7bac49b2778ab40687c7bce204d278b0bf028d124c75e59083107fba  riscv64-tls.patch
+ee585563b05d1e07e263f03da8af8cfc0aef0693416a817ce50bcc8ba3135794e9c9cae3d62e4aa8801b373c864c65a668bdc14b18e0dfe3591597fcafaa53ef  llvm20.patch
 "
