testing/davmail: upgrade to 6.3.0

--- a/testing/davmail/APKBUILD
+++ b/testing/davmail/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Struan Robertson <contact@struan.tech>
 pkgname=davmail
-pkgver=6.2.2
+pkgver=6.3.0
 pkgrel=0
 pkgdesc="DavMail POP/IMAP/SMTP/Caldav/Carddav/LDAP Exchange and Office 365 Gateway"
 url="https://davmail.sourceforge.net"
@@ -14,10 +14,7 @@ makedepends="
 depends="
 	java-jdk
 "
-source="
-	$pkgname-$pkgver.tar.gz::https://github.com/mguessan/davmail/archive/$pkgver/davmail-$pkgver.tar.gz
-	fix_linux_build.patch
-"
+source="$pkgname-$pkgver.tar.gz::https://github.com/mguessan/davmail/archive/$pkgver/davmail-$pkgver.tar.gz"
 options="net !check"
 
 build() {
@@ -34,6 +31,5 @@ package() {
 }
 
 sha512sums="
-599b8a5e4f6543e675b63ebe7feb4e6e6eaa73fd95546676b42a0f91d9bca2f51f6abc3df43f66e1a4ec84126c91ce9580b12d1d1b4c1d893633c18d026e2329  davmail-6.2.2.tar.gz
-56844ebf7332b186ba3e772ba2b9954bf64d67f2ad039e65d060118ce465d061706564c2a409b931b7a3bcde25372dd8a74c9fd49fbe253945ec50bf7b287ba2  fix_linux_build.patch
+f2fff85d97b17fdec31c534bf94f1e1978c7c18d67ac39967c0b51d1fd7653bb099e3b71f2c5b1ce7c8e6b5aea264afa232306b2db9f6edb19d97825344662ef  davmail-6.3.0.tar.gz
 "
