--- a/community/R/APKBUILD
+++ b/community/R/APKBUILD
@@ -10,7 +10,7 @@ url="https://www.r-project.org/"
 # loongarch64: test failure
 arch="all !riscv64"
 license="( GPL-2.0-only OR GPL-3.0-only ) AND LGPL-2.1-or-later"
-depends="$pkgname-mathlib"
+depends="$pkgname-mathlib tzdata"
 depends_dev="
 	bzip2-dev
 	curl-dev>=7.28
@@ -86,6 +86,9 @@ build() {
 }
 
 check() {
+	# Some tests fail if R cannot infer a time zone
+	export TZ=UTC
+
 	# Try running R (and also aid debugging).
 	./bin/R --vanilla -s -e 'sessionInfo(); R_compiled_by(); str(.Machine)'
 
@@ -141,6 +144,7 @@ package() {
 
 mathlib() {
 	pkgdesc="Standalone math library from the R project"
+	depends=
 
 	mkdir -p "$subpkgdir"/usr/lib
 	mv "$pkgdir"/usr/lib/libRmath.so* "$subpkgdir"/usr/lib
