main/scudo-malloc: add provider priority
testing/clang-next-rtlib-scudo also provides libscudo.so,
so ensure main/scudo-malloc gets the highest priority

--- a/main/scudo-malloc/APKBUILD
+++ b/main/scudo-malloc/APKBUILD
@@ -2,11 +2,12 @@
 pkgname=scudo-malloc
 # tied to llvm version
 pkgver=20.1.2
-pkgrel=0
+pkgrel=1
 pkgdesc="Standalone scudo malloc from compiler-rt"
 url="https://llvm.org"
 arch="all"
 license="Apache-2.0 WITH LLVM-exception"
+provider_priority=100  # highest
 depends_dev="$pkgname=$pkgver-r$pkgrel"
 makedepends="linux-headers"
 checkdepends="gtest-dev"
