community/ocaml-findlib: split ocamlfind executable into its own subpackage
this solves the conflict between ocaml-runtime and ocaml5-runtime,
allowing ocamlfind to be used with either OCaml 4 or OCaml 5

--- a/community/ocaml-findlib/APKBUILD
+++ b/community/ocaml-findlib/APKBUILD
@@ -3,15 +3,15 @@
 pkgname=ocaml-findlib
 _pkgname=findlib
 pkgver=1.9.6
-pkgrel=4
+pkgrel=5
 pkgdesc="OCaml package manager"
 url="http://projects.camlcity.org/projects/findlib.html"
 arch="all"
 license="MIT"
-depends="ocaml-runtime"
+depends="ocamlfind=$pkgver-r$pkgrel ocaml-runtime"
 depends_dev="$pkgname=$pkgver-r$pkgrel ocaml"
 makedepends="ocaml-compiler-libs ocaml-ocamldoc m4 ncurses-dev"
-subpackages="$pkgname-dev $pkgname-doc"
+subpackages="ocamlfind $pkgname-dev $pkgname-doc"
 source="http://download.camlcity.org/download/$_pkgname-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$pkgver"
 
@@ -22,8 +22,8 @@ case "$CARCH" in
 		# Install ocamlfind executable only, because buildrepo will
 		# only build APKBUILDs that have $pkgname as directory name,
 		# and building the -dev libs will make this an ocaml5-findlib
-		subpackages="$pkgname-doc"
-		depends=""
+		subpackages="ocamlfind $pkgname-doc"
+		depends="${depends/ocaml-runtime/}"
 		makedepends="${makedepends//ocaml-/ocaml5-}"
 		;;
 esac
@@ -45,6 +45,8 @@ check() {
 }
 
 package() {
+	pkgdesc="$pkgdesc (library)"
+
 	case "$CARCH" in
 		riscv64|loongarch64)
 			make install-config install-doc prefix="$pkgdir"
@@ -59,6 +61,14 @@ package() {
 	mkdir -p "$pkgdir"/usr/share/doc/$_pkgname/
 	install -m 644 doc/README doc/QUICKSTART \
 		"$pkgdir"/usr/share/doc/$_pkgname/
+}
+
+ocamlfind() {
+	depends=""
+
+	amove \
+		etc/findlib.conf \
+		usr/bin/ocamlfind
 }
 
 dev() {
