community/bear: upgrade to 3.1.6
run tests on all architectures

--- a/community/bear/APKBUILD
+++ b/community/bear/APKBUILD
@@ -1,11 +1,11 @@
 # Contributor: Sören Tempel <soeren+alpine@soeren-tempel.net>
 # Maintainer:
 pkgname=bear
-pkgver=3.1.5
-pkgrel=7
+pkgver=3.1.6
+pkgrel=0
 pkgdesc="Tool which generates a compilation database for clang tooling"
 url="https://github.com/rizsotto/Bear"
-# s390x: segfaults in check
+# s390x: segfaults in check - bear::exec_unit_test (SEGFAULT)
 arch="all !s390x"
 license="GPL-3.0-or-later"
 makedepends="
@@ -27,14 +27,6 @@ subpackages="$pkgname-doc"
 source="https://github.com/rizsotto/Bear/archive/$pkgver/bear-$pkgver.tar.gz"
 builddir="$srcdir/Bear-$pkgver"
 
-prepare() {
-	default_prepare
-	case "$CARCH" in
-		x86) rm -f test/cases/intercept/preload/signal_outside_build.sh ;;
-		riscv64) rm -f test/cases/intercept/preload/signal_outside_build.sh ;;
-	esac
-}
-
 build() {
 	cmake -B build -G Ninja \
 		-DCMAKE_INSTALL_PREFIX=/usr \
@@ -46,13 +38,7 @@ build() {
 }
 
 check() {
-	# XXX: Tests fail when ccache is enabled.
-	# armv7, armhf and aarch64 have some failing tests.
-	case "$CARCH" in
-		armhf|armv7|aarch64|riscv64|s390x) _options="--show-only" ;;
-		*) _options="--no-tests=ignore" ;;
-	esac
-	ctest --test-dir build --verbose "$_options"
+	ctest --test-dir build --verbose --no-tests=ignore
 }
 
 package() {
@@ -60,5 +46,5 @@ package() {
 }
 
 sha512sums="
-acf233f7bb8215694734b6c947c965323c0a5ea0c2a6bbb210a37e38fdf545326ca8de3a7b31ce81469756afd1c02233775ddc5936fd04132f216def6e3ce1de  bear-3.1.5.tar.gz
+5852ca8d93459a9e1a6d2e030cc3963c213bf1638241825ec5df4eea7e3460faca9436ca2e36b8e5da40222306a0ecc8ed80d1f5e518ddd97dc5e200d42a75bb  bear-3.1.6.tar.gz
 "
