--- a/testing/firefox-developer-edition/APKBUILD
+++ b/testing/firefox-developer-edition/APKBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Patrycja Rosa <alpine@ptrcnull.me>
 pkgname=firefox-developer-edition
-pkgver=138.0_beta7
+pkgver=138.0_beta8
 _pkgver=${pkgver/_beta/b}
-_releasedate=2025-04-14
+_releasedate=2025-04-16
 pkgrel=0
 pkgdesc="Firefox web browser"
 url="https://www.firefox.com/"
@@ -61,6 +61,7 @@ source="https://ftp.mozilla.org/pub/firefox/releases/$_pkgver/source/firefox-$_p
 	install-dir.patch
 	lfs64.patch
 	no-ccache-stats.patch
+	no-pip-check.patch
 	rust-lto-thin.patch
 	sandbox-sched_setscheduler.patch
 
@@ -118,8 +119,8 @@ build() {
 
 	export LDFLAGS="$LDFLAGS -Wl,--thinlto-jobs=$thinlto_jobs"
 
-	export CC="clang"
-	export CXX="clang++"
+	export CC="clang-$_llvmver"
+	export CXX="clang++-$_llvmver"
 
 	export SHELL=/bin/sh
 	export BUILD_OFFICIAL=1
@@ -191,7 +192,7 @@ package() {
 }
 
 sha512sums="
-71d3e6cfe763ab84ad0aeb2e6ce638ba896f2f5657a82dbf63647db98cc71530b559e9888674f170506a6e00991a412e49aba8b73f6f747ed3b427824cf994e8  firefox-138.0b7.source.tar.xz
+7f8130ee2dc2092023fbbc7f05e1184830bb9640cb48995855138d893b424a201307ba8a5a3e043bc45a5fc26df615ac25ca189d905f02d8d4458e1178328c3f  firefox-138.0b8.source.tar.xz
 106f168dc37a693e279f821695637e0ac0d3534b07f093ac835c5b11f604ad2f11817bbe9604009e27a2b1410c6584a84fe388621170f511914e3e8aa154639e  bmo-1928504-enable-relr.patch
 3c28e243c1c74a9bd1ea13729926b1cae3ee35843b14be92ff3287a8cd745e95954e1bc842f2add165923d159bb8d2a7bcd92ba8fb2f4017ba1aef892d77aecf  fix-fortify-system-wrappers.patch
 cd68b89e29e5f6379fbd5679db27b9a5ef70ea65e51c0d0a8137e1f1fd210e35a8cfb047798e9549bc7275606d7ec5c8d8af1335d29da4699db7acd8bc7ff556  fix-rust-target.patch
@@ -199,6 +200,7 @@ cd68b89e29e5f6379fbd5679db27b9a5ef70ea65e51c0d0a8137e1f1fd210e35a8cfb047798e9549
 ff471e5160e313a9657bcbb767a6a581bab9da053cced02bde38d1ef03349472ad3602dba026c10d676d55c1712af772dd2b7bdbfa72b5db498c9ce8a2133423  install-dir.patch
 e75daab5573ec6e28d3940a9bb98304d572dfb26ce7c1709e99fdd75dfa58abce170c96de683f8dc2224ea2e118aa7d78affbd54f99c4e328a4641685d64bd7d  lfs64.patch
 64b6458099baa225b346b40e3080cea3a5c73a834e39fa4a438af77701e6ded84e2fb0d6fffff8c2533cc43b898fe9f411be023e875acebec452aa2379861f04  no-ccache-stats.patch
+aabec21c290bded5f1bde0b23db7a5c10ca1663673a4c9ad29ac0a495522a754bdfbd95def3bada29acb9b263b5578ee213bf46b963342e74cd60ecc8beae97b  no-pip-check.patch
 1c6918dd6655d3a1251bfd4af2e1c561cbb00d540a883b4c1ebf7f5de530d754d9ac07b4b5f56cdab6c511d25c8910ec94043f5733e97501a67abffe1bafaeb1  rust-lto-thin.patch
 f8c3555ef6207933cbffbf4fc101a9b4c0d2990c0063162f0f0bde70ef0b46f86bfac42e7110695183424a87948de593f3927b2d8509ede3e4fc7bd8a1fad1ce  sandbox-sched_setscheduler.patch
 0b3f1e4b9fdc868e4738b5c81fd6c6128ce8885b260affcb9a65ff9d164d7232626ce1291aaea70132b3e3124f5e13fef4d39326b8e7173e362a823722a85127  stab.h
