community/tty-solitaire: upgrade to 1.4.1

--- a/community/tty-solitaire/APKBUILD
+++ b/community/tty-solitaire/APKBUILD
@@ -1,17 +1,14 @@
 # Contributor: Will Sinatra <wpsinatra@gmail.com>
 # Maintainer: Will Sinatra <wpsinatra@gmail.com>
 pkgname=tty-solitaire
-pkgver=1.3.1
-pkgrel=1
+pkgver=1.4.1
+pkgrel=0
 pkgdesc="ncurses-based klondike solitaire game"
 url="https://github.com/mpereira/tty-solitaire"
 license="MIT"
 arch="all"
-depends="ncurses"
 makedepends="ncurses-dev"
-source="tty-solitaire-$pkgver.tar.gz::https://github.com/mpereira/tty-solitaire/archive/v$pkgver.tar.gz
-	werrorformat.patch
-	"
+source="tty-solitaire-$pkgver.tar.gz::https://github.com/mpereira/tty-solitaire/archive/v$pkgver.tar.gz"
 options="!check"
 
 build() {
@@ -27,6 +24,5 @@ package() {
 }
 
 sha512sums="
-45c80da0c16e165df313dc4cb5d338271b701c2957c858b8e4b9c73e203e84b9a8bf664e6c25ca3d49c63960bd051e783a0f1c04b3f7df394eeba1774d801f6a  tty-solitaire-1.3.1.tar.gz
-eebc33f57613fa7d51666625e395a77eafc429aac86ef0f3e50fa1860c1685b779907a0e4eec63b9e5ad95be595bdc4d99b56359fb4da63f0c62c9e102365cb2  werrorformat.patch
+a8fb62c436e977b93632bd771384b5ddb226fa297b3eaec154b8679135c3bba802aadf7f13a8aff47a268f5dcc00c2d15ba62702342d30baf1903bdf9824573a  tty-solitaire-1.4.1.tar.gz
 "
