--- a/community/rabbitmq-server/APKBUILD
+++ b/community/rabbitmq-server/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Celeste <cielesti@protonmail.com>
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=rabbitmq-server
-pkgver=4.0.9
+pkgver=4.1.0
 pkgrel=0
 pkgdesc="open source multi-protocol messaging broker"
 url="https://www.rabbitmq.com/"
@@ -10,6 +10,7 @@ arch="noarch"
 license="MPL-2.0"
 depends="erlang"
 makedepends="
+	7zip
 	elixir
 	erlang-dev
 	gawk
@@ -85,7 +86,7 @@ package() {
 }
 
 sha512sums="
-ebb9ed0fa445ca909134bc3fa2a617dbc428993460921e686eb3498c12cb4b40afa2b39ae501d002406ca2ec7480e0d1ef7ecc24f28f6d240f29030e541291fb  rabbitmq-server-4.0.9.tar.xz
+f562a7192e4a1bebf3c16088d41fedd8fb9cf39337c8c497353e465d50c05b725f60b7b62518e748f5a31aa256a6ddfd4f33ad5fc6de38cb4bce00d6c5616343  rabbitmq-server-4.1.0.tar.xz
 52413e264ae13a607262f17068ea9b9e65cc23e348d4baf45635473893758ee4571fe1b47989b1c0e69d82ec653e013955719465d37474d3e3e29c21808403f5  rabbitmq-server.initd
 b8655cb048ab3b32001d4e6920bb5366696f3a5da75c053605e9b270e771c548e36858dca8338813d34376534515bba00af5e6dd7b4b1754a0e64a8fb756e3f3  rabbitmq-server.logrotate
 "
