community/spvm: upgrade to 0.990054
https://metacpan.org/release/KIMOTO/SPVM-0.990054/source/Changes

--- a/community/spvm/APKBUILD
+++ b/community/spvm/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Celeste <cielesti@protonmail.com>
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=spvm
-pkgver=0.990052
+pkgver=0.990054
 pkgrel=0
 #_pkgreal is used by apkbuild-cpan to find modules at MetaCpan
 _pkgreal=SPVM
@@ -11,7 +11,7 @@ url="https://metacpan.org/release/SPVM/"
 # s390x: murmur_hash test from t/02_vm/08_module/Hash.t fails
 arch="all !s390x"
 license="MIT"
-depends="gcc musl-dev perl"
+depends="cmd:cc musl-dev perl"
 makedepends="perl-dev"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/K/KI/KIMOTO/SPVM-$pkgver.tar.gz"
@@ -38,5 +38,5 @@ package() {
 }
 
 sha512sums="
-0cdc58d1ec39c010949a721d335bb910797c29c9d192c08b8d2c324aab39b3d4e2df3c699ef3c54f7ab8e4877acaa3e259e4ea6d4df1d4eff4f4ba476b08efe9  SPVM-0.990052.tar.gz
+428cb39e1a2819e2d15f7e56b79181e1922d1f26129b78409d22e9300f282c7d32eccdd981aa541c6a4e5d3703ee559bb01a6908f52d2a1b60186f22f9398da8  SPVM-0.990054.tar.gz
 "
