testing/llvm-next: enable on riscv64

--- a/testing/llvm-next/APKBUILD
+++ b/testing/llvm-next/APKBUILD
@@ -6,7 +6,7 @@ _gitrev=84082223c819426a8a6486f9740210e956a4cea8
 pkgrel=0
 pkgdesc="Future LLVM Preview"
 url="https://llvm.org/"
-arch="aarch64 loongarch64 ppc64le x86_64"
+arch="aarch64 loongarch64 ppc64le riscv64 x86_64"
 license="Apache-2.0"
 depends_dev="
 	$pkgname=$pkgver-r$pkgrel
@@ -422,7 +422,7 @@ ExecutionEngine/MCJIT/remote/eh.ll;\
 "
 
 	case "$CARCH" in
-	loongarch64|ppc64le)
+	loongarch64|ppc64le|riscv64)
 		LIT_XFAIL="${LIT_XFAIL}\
 Bindings/OCaml/debuginfo.ml;\
 "
