--- a/community/py3-dns-lexicon/APKBUILD
+++ b/community/py3-dns-lexicon/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Duncan Bellamy <dunk@denkimushi.com>
 # Maintainer: Duncan Bellamy <dunk@denkimushi.com>
 pkgname=py3-dns-lexicon
-pkgver=3.20.1
+pkgver=3.21.0
 pkgrel=0
 pkgdesc="Manipulate DNS records on various DNS providers in a standardized/agnostic way"
 url="https://github.com/dns-lexicon/dns-lexicon"
@@ -34,7 +34,8 @@ checkdepends="
 	$_providerdepends
 	"
 subpackages="$pkgname-pyc"
-source="$pkgname-github-$pkgver.tar.gz::https://github.com/dns-lexicon/dns-lexicon/archive/refs/tags/v$pkgver.tar.gz"
+source="$pkgname-github-$pkgver.tar.gz::https://github.com/dns-lexicon/dns-lexicon/archive/refs/tags/v$pkgver.tar.gz
+	findall.patch"
 builddir="$srcdir/dns-lexicon-$pkgver"
 
 build() {
@@ -61,5 +62,6 @@ package() {
 }
 
 sha512sums="
-98a29bc67596e58ada43373fd1dfa2a5c35512dd33924969df0d16c10cf2e53cf2bc564488c9f7a1b682b63a7959cd2073207a8d77435aa62a04f408024d85fd  py3-dns-lexicon-github-3.20.1.tar.gz
+1b132fae2741d8cf505c0779724b5e0d518683226099c796f1b77b4ceb07e1fbecccb4d82869be090f2c379b3d17f19766857e49f83760d793a0934f520bc8ed  py3-dns-lexicon-github-3.21.0.tar.gz
+29d3ce361d295646763ca80b9dc01cb87f5843e9b58f83f238aaefe16eb387186c1166c56b437c21a842d9deb047c037fc66bfccd55b153e74c745083effacd9  findall.patch
 "
