Revert "main/abuild: disable dt_relr for loongarch64"
should be fixed with binutils 2.43

This reverts commit 01b33360fca02c068ce526b07acdf9b01a326dcc.

--- a/main/abuild/APKBUILD
+++ b/main/abuild/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=abuild
 pkgver=3.15.0_rc3
-pkgrel=0
+pkgrel=1
 pkgdesc="Script to build Alpine Packages"
 url="https://gitlab.alpinelinux.org/alpine/abuild/"
 arch="all"
@@ -50,7 +50,7 @@ package() {
 	install -m 644 abuild.conf "$pkgdir"/etc/abuild.conf
 
 	case "$CARCH" in
-	aarch64|x86*|ppc64le)
+	aarch64|loongarch64|x86*|ppc64le)
 		# binutils only supports it here
 		cat >>"$pkgdir"/usr/share/abuild/default.conf <<-EOF
 
