--- a/community/openjdk17/APKBUILD
+++ b/community/openjdk17/APKBUILD
@@ -1,9 +1,9 @@
 # Contributor: Simon Frankenberger <simon-alpine@fraho.eu>
 # Maintainer: Simon Frankenberger <simon-alpine@fraho.eu>
 pkgname=openjdk17
-pkgver=17.0.14_p7
+pkgver=17.0.15_p6
 _pkgver=${pkgver%_p*}-ga
-pkgrel=1
+pkgrel=0
 pkgdesc="Oracle OpenJDK 17"
 provider_priority=17
 url="https://github.com/openjdk/jdk17u"
@@ -74,6 +74,10 @@ loongarch64)	_jvm_variants=zero	;;
 esac
 
 # secfixes:
+#   17.0.15_p6-r0:
+#     - CVE-2025-23083
+#     - CVE-2025-21587
+#     - CVE-2025-30698
 #   17.0.14_p7-r0:
 #     - CVE-2025-21502
 #   17.0.13_p11-r0:
@@ -401,7 +405,7 @@ _jdk() {
 }
 
 sha512sums="
-0643ac52b68e5884734289ab13592feef7273db96f7b5c0fd77d801e4d4e44a84abcc439fd1b138119c5583986f1d0b058aa74f55b00e0dfd31333cbb536744d  jdk-17.0.14-ga.tar.gz
+207ac62818c8730c1d2ad82f21f812b5b85d41aab9990f7b29b55f6df0e1cd3c6cf5737d5b40895bc47f6b0022c637275a7c8ac994cf789cd88424b6af4c4ad6  jdk-17.0.15-ga.tar.gz
 70c0cfb1b4147bdecb467ecb22ae5b5529eec0abc085763213a796b7cdbd81d1761d12b342060539b936fa54f345d33f060601544874d6213fdde79111fa813e  gtest-1.13.0.tar.gz
 007e643039af096e77e491ccba821596c7e96b80d9821a7fbe4a78ca3f013c5e771956461d82505c26b0ca3ab06699877f398833db459e2442c0c51f71fee361  ppc64le.patch
 "
