--- a/community/openjdk21/APKBUILD
+++ b/community/openjdk21/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Simon Frankenberger <simon-alpine@fraho.eu>
 # Maintainer: Simon Frankenberger <simon-alpine@fraho.eu>
 pkgname=openjdk21
-pkgver=21.0.6_p7
+pkgver=21.0.7_p6
 _pkgver=${pkgver%_p*}-ga
 pkgrel=0
 pkgdesc="Oracle OpenJDK 21"
@@ -78,6 +78,11 @@ esac
 ldpath="$_java_home/lib:$_java_home/lib/$_jvm_variants"
 
 # secfixes:
+#   21.0.7_p6-r0:
+#     - CVE-2025-23083
+#     - CVE-2025-21587
+#     - CVE-2025-30698
+#     - CVE-2025-30691
 #   21.0.6_p7-r0:
 #     - CVE-2025-21502
 #   21.0.5_p11-r0:
@@ -328,7 +333,7 @@ _jdk() {
 }
 
 sha512sums="
-fb03362608a35b0f6e131eaa974a52e6ff8a96f90d3bdaeccd2e1268f46db65c72387ed7bba1c8b0d9457c56950eae607fba29e102a338b009259262e1024726  jdk-21.0.6-ga.tar.gz
+69bc3e78e1d0bacbf166bc028baa42de73c318b12b838197a2bf8373794888e688c714500431b09e9105a9ec9263080398e55cf13395b514525840a275b2eacd  jdk-21.0.7-ga.tar.gz
 70c0cfb1b4147bdecb467ecb22ae5b5529eec0abc085763213a796b7cdbd81d1761d12b342060539b936fa54f345d33f060601544874d6213fdde79111fa813e  gtest-1.13.0.tar.gz
 49128238737587dda2b170b20245bddf5e70d9644d9cc5b8e76d6e5e17102a10808d0a8f863e9dd9a68c4033beaa226ae95e8f6742a11960ca7ac5e59c1704ea  ppc64le.patch
 73c8aeb77e2b1f105c62d1739a19f973cb34a16380fbff142605ee7e93cbc388613fa693d96b779ce73e82cd5fc4e46ffb09c3e3a522a8d459088dd47388ac23  riscv64.patch
