community/cargo-outdated: upgrade to 0.17.0

--- a/community/cargo-outdated/APKBUILD
+++ b/community/cargo-outdated/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: kpcyrd <git@rxv.cc>
 # Maintainer: kpcyrd <git@rxv.cc>
 pkgname=cargo-outdated
-pkgver=0.16.0
-pkgrel=1
+pkgver=0.17.0
+pkgrel=0
 pkgdesc="Cargo subcommand for displaying when Rust dependencies are out of date"
 url="https://github.com/kbknapp/cargo-outdated"
 arch="all"
@@ -18,9 +18,7 @@ makedepends="
 	"
 subpackages="$pkgname-doc"
 options="net"
-source="$pkgname-$pkgver.tar.gz::https://github.com/kbknapp/cargo-outdated/archive/v$pkgver.tar.gz
-	001-fix-cargo-lock.patch
-	"
+source="$pkgname-$pkgver.tar.gz::https://github.com/kbknapp/cargo-outdated/archive/v$pkgver.tar.gz"
 
 export LIBSSH2_SYS_USE_PKG_CONFIG=1
 export LIBGIT2_NO_VENDOR=0 # temporarily use vendored libgit2, fix cargo(crate) 0.84
@@ -49,6 +47,5 @@ package() {
 }
 
 sha512sums="
-211aa1e0219e97e0538626ad3c06adb2be6cb2df05fa733239d5900510cdf7cc06d8686e6a4285c2d6095a53dd70b217204cd7d06a1f54899f9d85d7e28169df  cargo-outdated-0.16.0.tar.gz
-47a2645885bd30b38110349a6882f8e874715efcc60e8599c1d7fcabef838aebd72e3723ec12921b88cd6676f06f8209195ef50e5734c07f29e3f25ad02c34e4  001-fix-cargo-lock.patch
+ec39837536156fa30810f3f40ef0805c2178c360dfe711c2dd6e41014f621539dd41a5b592b5a836ac983fafb74dcdd46f80860701e9efe30a7db2bae159a14f  cargo-outdated-0.17.0.tar.gz
 "
