community/cargo-edit: upgrade to 0.13.2

--- a/community/cargo-edit/APKBUILD
+++ b/community/cargo-edit/APKBUILD
@@ -1,13 +1,11 @@
 # Contributor: kpcyrd <git@rxv.cc>
 # Maintainer: kpcyrd <git@rxv.cc>
 pkgname=cargo-edit
-pkgver=0.13.1
+pkgver=0.13.2
 pkgrel=0
 pkgdesc="Managing cargo dependencies from the command line"
 url="https://github.com/killercup/cargo-edit"
-# s390x, ppc64le, riscv64: blocked by ring crate
-# x86: tests segfault
-arch="all !s390x !ppc64le !riscv64 !x86"
+arch="all"
 license="MIT OR Apache-2.0"
 makedepends="
 	cargo
@@ -48,5 +46,5 @@ package() {
 }
 
 sha512sums="
-65997e810cdc22a7e2b7c1d880eb717a601db7f36fee94b828036a1c90ece8981b8fcbdfd14735a718eccaacf815c6817e9f7900af386c66c09211136729ec5a  cargo-edit-0.13.1.tar.gz
+1d2d4e19e00534a1031e2c8a104563f6ef04e57d7c829006883ba86da56173dfe03f831d46714d6db03b77faa4fc4bf04b170ae661d75bacc25b2b36b433fdd3  cargo-edit-0.13.2.tar.gz
 "
