testing/apache-mod-auth-openidc: security upgrade to 2.4.16.11

--- a/testing/apache-mod-auth-openidc/APKBUILD
+++ b/testing/apache-mod-auth-openidc/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Takumi Takahashi <takumiiinn@gmail.com>
 pkgname=apache-mod-auth-openidc
 _pkgname=mod_auth_openidc
-pkgver=2.4.16.4
+pkgver=2.4.16.11
 pkgrel=0
 pkgdesc="OpenID Connect Relying Party implementation for Apache HTTP Server 2.x"
 url="https://www.mod-auth-openidc.org"
@@ -25,6 +25,8 @@ source="https://github.com/OpenIDC/mod_auth_openidc/releases/download/v$pkgver/$
 builddir="$srcdir"/$_pkgname-$pkgver
 
 # secfixes:
+#   2.4.16.11-r0:
+#     - CVE-2025-31492
 #   2.4.15.3-r0:
 #     - CVE-2024-24814
 
@@ -57,5 +59,5 @@ package() {
 }
 
 sha512sums="
-0f769eca714ae73d3398976e742b46faae7c3fdce419716fbb353e0276a59bb94cafd7c7007768e55b0f62bd2c08d9c8831cabcef23ba0c35a9dc0d2b4422611  mod_auth_openidc-2.4.16.4.tar.gz
+b578278070f5acf3a4c14f7f1ff8784c7e8ab915385f3cb78912025fb6510377df9609d998885be04290f0bc7f433f3d5c7309243246bb593c839eb116056e54  mod_auth_openidc-2.4.16.11.tar.gz
 "
