testing/calibre: upgrade to 8.3.0
 - On musl, use 'pread' instead of 'pread64'.

--- a/testing/calibre/APKBUILD
+++ b/testing/calibre/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Cowington Post <cowingtonpost@gmail.com>
 pkgname=calibre
-pkgver=8.0.1
-pkgrel=1
+pkgver=8.3.0
+pkgrel=0
 pkgdesc="Ebook management application"
 # qt6-webengine
 arch="x86_64 aarch64"
@@ -70,6 +70,7 @@ subpackages="
 	"
 source="https://download.calibre-ebook.com/$pkgver/calibre-$pkgver.tar.xz
 	0001-$pkgname-no-update.patch
+	musl-pread.patch
 	"
 # net: downloads iso-codes
 # !check: no tests ran
@@ -112,6 +113,7 @@ package() {
 }
 
 sha512sums="
-ba2f8c48fba8c6ae737e2f9a92a8b0bc27b9ebfd7394532d8b7c08f599e1dfd68d2594dbe942f483397d8f7321e0b70b72b02c9bf625d06bc3b8b335ef6263e4  calibre-8.0.1.tar.xz
+02852d5f8e3e0af8f37a55eaedd545cfb398522bc0728c4299af560eb87261f93aaa64bf967c4c1f8c20cd17be98e229178b5402ef43c71b2aaba8208b4d505a  calibre-8.3.0.tar.xz
 eb8e7ce40ff8b8daf6e7e55a5dff8ec4dff06c45744266bb48b3194e92ab1196bc91468203e3c2ca1e5144166a7d6be90e6cf0253513e761b56a4c85be4c2c76  0001-calibre-no-update.patch
+d27d29c434a3d2df1b18125225a4d3762bf6fdba77385b377b18a7f325f29ae0b698974a39263f4f7aed8a368c87d0dc4446f488505b8e38664f8e9ee5b9bd12  musl-pread.patch
 "
