--- a/testing/firefox-developer-edition/APKBUILD
+++ b/testing/firefox-developer-edition/APKBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Patrycja Rosa <alpine@ptrcnull.me>
 pkgname=firefox-developer-edition
-pkgver=138.0_beta8
+pkgver=138.0_beta9
 _pkgver=${pkgver/_beta/b}
-_releasedate=2025-04-16
+_releasedate=2025-04-18
 pkgrel=0
 pkgdesc="Firefox web browser"
 url="https://www.firefox.com/"
@@ -50,6 +50,7 @@ makedepends="
 	python3
 	sed
 	wasi-sdk
+	wasi-compiler-rt~19
 	wireless-tools-dev
 	zip
 	"
@@ -192,7 +193,7 @@ package() {
 }
 
 sha512sums="
-7f8130ee2dc2092023fbbc7f05e1184830bb9640cb48995855138d893b424a201307ba8a5a3e043bc45a5fc26df615ac25ca189d905f02d8d4458e1178328c3f  firefox-138.0b8.source.tar.xz
+c07e2c7893672c5a605ed551084b0c8067471a638ce3a8b3ffd9c802f204ed2df1161143e7aab3dca864f4decd23e4d8b0a5e5e50774b96e3f8b23c362623682  firefox-138.0b9.source.tar.xz
 106f168dc37a693e279f821695637e0ac0d3534b07f093ac835c5b11f604ad2f11817bbe9604009e27a2b1410c6584a84fe388621170f511914e3e8aa154639e  bmo-1928504-enable-relr.patch
 3c28e243c1c74a9bd1ea13729926b1cae3ee35843b14be92ff3287a8cd745e95954e1bc842f2add165923d159bb8d2a7bcd92ba8fb2f4017ba1aef892d77aecf  fix-fortify-system-wrappers.patch
 cd68b89e29e5f6379fbd5679db27b9a5ef70ea65e51c0d0a8137e1f1fd210e35a8cfb047798e9549bc7275606d7ec5c8d8af1335d29da4699db7acd8bc7ff556  fix-rust-target.patch
