main/py3-elftools: fix install with coreutils
coreutils requires -t for target directory

--- a/main/py3-elftools/APKBUILD
+++ b/main/py3-elftools/APKBUILD
@@ -30,8 +30,8 @@ package() {
 	python3 -m installer -d "$pkgdir" .dist/*.whl
 
 	mkdir -p "$pkgdir"/usr/share/doc/$pkgname
-	install -m644 README.rst CHANGES \
-		"$pkgdir"/usr/share/doc/$pkgname/doc
+	install -m644 -t "$pkgdir"/usr/share/doc/$pkgname \
+		README.rst CHANGES
 }
 
 sha512sums="
