--- a/main/wasi-libc/APKBUILD
+++ b/main/wasi-libc/APKBUILD
@@ -15,7 +15,8 @@ options="!check" # no testsuite
 #   libc-bottom-half/cloudlibc/	- BSD-2-Clause
 #   libc-top-half/musl/		- MIT
 license="Apache-2.0 WITH LLVM-exception AND Apache-2.0 AND MIT AND CC0-1.0 AND BSD-2-Clause"
-makedepends="clang llvm"
+_llvmver=19
+makedepends="clang$_llvmver llvm$_llvmver"
 source="wasi-libc-$_gitrev.tar.gz::https://github.com/WebAssembly/wasi-libc/archive/$_gitrev.tar.gz
 	no-double-build.patch
 	"
@@ -23,17 +24,17 @@ builddir="$srcdir"/$pkgname-$_gitrev
 
 build() {
 	# https://bugzilla.mozilla.org/show_bug.cgi?id=1773200#c4
-	make CC=clang BULK_MEMORY_SOURCES=
-	make CC=clang THREAD_MODEL=posix
+	make CC=clang-$_llvmver AR=llvm$_llvmver-ar NM=llvm$_llvmver-nm BULK_MEMORY_SOURCES=
+	make CC=clang-$_llvmver AR=llvm$_llvmver-ar NM=llvm$_llvmver-nm THREAD_MODEL=posix
 
 	# new wasm targets needed by rust
-	make CC=clang TARGET_TRIPLE=wasm32-wasip1
-	make CC=clang TARGET_TRIPLE=wasm32-wasip1-threads THREAD_MODEL=posix
-	make CC=clang TARGET_TRIPLE=wasm32-wasip2 WASI_SNAPSHOT=p2
+	make CC=clang-$_llvmver AR=llvm$_llvmver-ar NM=llvm$_llvmver-nm TARGET_TRIPLE=wasm32-wasip1
+	make CC=clang-$_llvmver AR=llvm$_llvmver-ar NM=llvm$_llvmver-nm TARGET_TRIPLE=wasm32-wasip1-threads THREAD_MODEL=posix
+	make CC=clang-$_llvmver AR=llvm$_llvmver-ar NM=llvm$_llvmver-nm TARGET_TRIPLE=wasm32-wasip2 WASI_SNAPSHOT=p2
 }
 
 package() {
-	make CC=clang INSTALL_DIR="$pkgdir"/usr/share/wasi-sysroot install
+	make CC=clang-$_llvmver AR=llvm$_llvmver-ar NM=llvm$_llvmver-nm INSTALL_DIR="$pkgdir"/usr/share/wasi-sysroot install
 }
 
 sha512sums="
