community/postgresql-timescaledb: remove mention of non-free repository
That repository doesn't exist anymore for a while

--- a/community/postgresql-timescaledb/APKBUILD
+++ b/community/postgresql-timescaledb/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: wener <wenermail@gmail.com>
 pkgname=postgresql-timescaledb
 pkgver=2.17.2
-pkgrel=0
+pkgrel=1
 pkgdesc="PostgreSQL extension for time‑series data"
 url="https://github.com/timescale/timescaledb"
 arch="all"
@@ -19,7 +19,6 @@ makedepends="
 	postgresql-dev
 	samurai
 	"
-install="$pkgname.post-install $pkgname.post-upgrade"
 source="https://github.com/timescale/timescaledb/archive/$pkgver/postgresql-timescaledb-$pkgver.tar.gz
 	fix-build.patch
 	"
@@ -36,8 +35,7 @@ build() {
 	# REGRESS_CHECKS=OFF - disable regress test
 	#   regress need https://github.com/timescale/timescaledb/blob/master/test/pg_isolation_regress.sh
 	#   which need to compile pg - https://github.com/timescale/timescaledb/issues/1655#issuecomment-578683986
-	# APACHE_ONLY - we cannot provide non-free software in Alpine repos;
-	#  users can build TSL module themselves with aport non-free/postgresql-timescaledb-tsl.
+	# APACHE_ONLY - we cannot provide non-free software in Alpine repos
 	cmake -B build -G Ninja \
 		-DCMAKE_BUILD_TYPE=Release \
 		-DCMAKE_INSTALL_PREFIX=/usr \
