community/libgtop: enable introspection

--- a/community/libgtop/APKBUILD
+++ b/community/libgtop/APKBUILD
@@ -1,13 +1,20 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libgtop
 pkgver=2.41.3
-pkgrel=0
+pkgrel=1
 pkgdesc="GNOME top library"
 url="https://www.gnome.org/"
 arch="all"
 license="LGPL-2.1-or-later"
 options="suid !check" # No testsuite
-makedepends="intltool linux-headers glib-dev libxau-dev libx11-dev"
+makedepends="
+	intltool
+	linux-headers
+	glib-dev
+	gobject-introspection-dev
+	libxau-dev
+	libx11-dev
+	"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang $pkgname-tools"
 source="https://download.gnome.org/sources/libgtop/${pkgver%.*}/libgtop-$pkgver.tar.xz"
 
