main/botan: explicitly specify c++ compiler type
Fixes "ERROR: Could not figure out what compiler type 'c++' is, use
--cc to set" which occurs as abuild now sets CXX=c++ instead of g++

--- a/main/botan/APKBUILD
+++ b/main/botan/APKBUILD
@@ -58,7 +58,8 @@ build() {
 		--with-sqlite3 \
 		--with-zlib \
 		--with-os-feature=getrandom \
-		--disable-static
+		--disable-static \
+		--cc="$($CXX --version | grep -m 1 -o clang || echo gcc)"
 
 	make
 }
