testing/convert2json: package ini tools

--- a/testing/convert2json/APKBUILD
+++ b/testing/convert2json/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Simon Rupf <simon@rupf.net>
 pkgname=convert2json
 pkgver=2.1.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Utilities to convert CSV, INI, RSV, TOML, XML & YAML to JSON, including jq/jaq wrappers."
 url="https://github.com/simonrupf/convert2json"
 arch="all"
@@ -31,11 +31,10 @@ check() {
 }
 
 package() {
-	install -Dm755 target/release/cq target/release/tq target/release/rq \
-	    target/release/xq target/release/yq target/release/csv2json \
-	    target/release/toml2json target/release/rsv2json \
-	    target/release/xml2json target/release/yaml2json \
-	    -t "$pkgdir"/usr/bin
+	for binary in cq iq tq rq xq yq csv2json ini2json toml2json rsv2json xml2json yaml2json
+	do
+		install -Dm755 target/release/"$binary" -t "$pkgdir"/usr/bin
+	done
 	install -Dm644 LICENSE.md "$pkgdir"/usr/share/licenses/$pkgname/LICENSE.md
 	install -Dm644 README.md "$pkgdir"/usr/share/doc/$pkgname/README.md
 }
